--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Ionic App</title>
 
   <base href="/" />
-  <meta http-equiv="Content-Security-Policy" content="default-src *;
+  <meta http-equiv="Content-Security-Policy" content="font-src 'self' data:; default-src *;
   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
   style-src  'self' 'unsafe-inline' *">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
